--- a/library.properties
+++ b/library.properties
@@ -4,6 +4,6 @@ author=Łukasz Tretyn, Nettigo
 maintainer=Łukasz Tretyn <saperwl@o2.pl>
 sentence=Program controlled by time 
 paragraph=Your program will be able to run multiple tasks at a specific time
-category=time,timeout
+category=Timing
 url=https://github.com/nettigo/Timers
 architectures=avr,sam,samd
